<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_id">382823371820474</string>
    <string name="str_lover_number">爱情专线</string>
    <string name="app_name">微爱</string>
    <string name="str_headsettings_name">头像装饰</string>
    <string name="str_avatar">头像</string>
    <string name="str_emotion_download">下载</string>
    <string name="str_emotion_uninstall">取消使用</string>
    <string name="str_emotion_install">使用</string>
    <string name="str_emotion_using">使用中</string>
    <string name="str_emotion_useless">未使用</string>
    <string name="str_download_emotion_tip">点击查看动态表情</string>
    <string name="str_download_without_wifi">您当前不在wifi网络</string>
    <string name="str_emotion_download_without_wifi_message">下载此表情包可能消耗部分流量，确认下载吗？</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_emotion_cancel">表情包下载已经取消</string>
    <string name="str_emotion_copyright">Copyright ©%1$s</string>
    <string name="str_emotion_copyright_diascoerybay">北京发现角科技有限公司</string>
    <string name="str_loading">正在加载</string>
    <string name="str_screenshoting">正在截屏</string>
    <string name="str_login_name_tip">请填写有效email</string>
    <string name="str_ok">确定</string>
    <string name="str_send">发送</string>
    <string name="str_username">请填写登录邮箱</string>
    <string name="str_password">请填写登录密码</string>
    <string name="str_password_send_succ_1">重置密码已经发送到你的邮箱</string>
    <string name="str_password_send_succ_2">快去邮箱查收吧:)</string>
    <string name="str_reg_user">新用户注册</string>
    <string name="str_reg_final_confirm_text">这个邮箱将作为您的微爱登录帐号，请务必牢记！</string>
    <string name="str_reg_confirm_button">确定注册</string>
    <string name="str_forgot_pwd_login">找回密码</string>
    <string name="str_forgot_pwd">忘记密码？</string>
    <string name="str_forgot_pwd_content">密码重置链接将发送到您的注册邮箱</string>
    <string name="str_forgot_pwd_tip">请填写正确的邮箱</string>
    <string name="str_forgot_btn">重置密码</string>
    <string name="str_notification_sound">提醒铃声</string>
    <string name="str_notification_sound_fail">设置提醒铃声失败</string>
    <string name="str_notification_upload_sound">正在更新铃声设置</string>
    <string name="str_notification_default_sound">跟随系统</string>
    <string name="str_notification_kiss_sound">飞吻</string>
    <string name="str_notification_bell_sound">爱情门铃</string>
    <string name="str_notification_echo_sound">甜蜜回音</string>
    <string name="str_notification_hear_love_sound">听见幸福</string>
    <string name="str_reg_gender">性别</string>
    <string name="str_reg_modify_gender">修改性别</string>
    <string name="str_reg_invalid_gender">你还没选择性别哦</string>
    <string name="str_reg_invalid_agreement">请同意使用条款和隐私政策！</string>
    <string name="str_reg_male_text">男</string>
    <string name="str_reg_female_text">女</string>
    <string name="str_reg_nickname">昵称</string>
    <string name="str_reg_nickname_hint">昵称（可选）</string>
    <string name="str_reg_invalid_email">邮箱地址不符合格式</string>
    <string name="str_reg_nocontent_email">还未填入邮箱地址</string>
    <string name="str_wish_no_content">还未输入内容</string>
    <string name="str_phonenumber_no_content">还未输入号码</string>
    <string name="str_wish_content_out_litmit">字数超出限制</string>
    <string name="str_reg_invalid_pwd_too_short">密码至少6位哦</string>
    <string name="str_reg_invalid_pwd_too_long">密码至多20位哦</string>
    <string name="str_reg_invalid_pwd_no_content">还没输入密码哦</string>
    <string name="str_reg_agreement">已阅读并同意</string>
    <string name="str_reg_agreement_link">使用条款和隐私政策</string>
    <string name="str_reg_take_photo">拍摄照片</string>
    <string name="str_reg_select_photo">从相册中选择</string>
    <string name="str_reg_single_for_help">单身求解救</string>
    <string name="str_modify_avatar">更改头像</string>
    <string name="str_modify_avatar_success">更改头像成功</string>
    <string name="str_chat_bg">聊天背景</string>
    <string name="str_setup_share">分享</string>
    <string name="settings_custom">自定义</string>
    <string name="str_send_message">回车键发送消息</string>
    <string name="str_shock">震动</string>
    <string name="str_setup_notification">系统通知栏显示微爱图标</string>
    <string name="str_voice">声音</string>
    <string name="str_break">解除关系</string>
    <string name="str_welove_relation">微爱关系</string>
    <string name="str_break_desc1">失去的不能重来</string>
    <string name="str_break_desc2">解除关系后你们的数据将被清空</string>
    <string name="str_anni_day">天</string>
    <string name="str_anni_brithday">的生日</string>
    <string name="str_anni_blank_together">我们在一起啦</string>
    <string name="str_anni_blank_kiss">第一次接吻的日子</string>
    <string name="str_anni_blank_hug">第一次拥抱的日子</string>
    <string name="str_anni_blank_travel">第一次携手旅行的日子</string>
    <string name="str_anni_blank_ml">第一次爱爱的日子</string>
    <string name="str_anni_blank_marry">结婚纪念日</string>
    <string name="str_update">更新</string>
    <string name="str_update_in_one_minute">1分钟前更新</string>
    <string name="str_edit_anni_title_tip">点击输入纪念日内容</string>
    <string name="str_edit_anni_date_tip">点击这里选择日期</string>
    <string name="str_anni_date_empty">日期不能为空哦 :-)</string>
    <string name="str_anni_title_empty">纪念日内容不能为空</string>
    <string name="str_anni_title_too_long">纪念日内容不能超过%1$s个字</string>
    <string name="str_anni_run">闰</string>
    <string name="str_anni_nongli">农历</string>
    <string name="str_anni_gongli">公历</string>
    <string name="anni_start_date">起始日：</string>
    <string name="anni_end_date">目标日：</string>
    <string name="anni_share_text_weibo">#微爱#微爱一直都记录着我们的爱，亲爱的你，我们要一直幸福http://www.welove520.com/wap?platform=weibo @应用_微爱</string>
    <string name="anni_share_text_qzone">微爱一直都记录着我们的爱，亲爱的你，我们要一直幸福http://www.welove520.com/wap?platform=qzone</string>
    <string name="str_nickname_too_long">昵称只限20个字，不要太长哦</string>
    <string name="str_modify_nickname">修改昵称</string>
    <string name="str_screenlock_setup_success">锁屏密码设置成功</string>
    <string name="str_screenlock_clear_success">锁屏密码已关闭</string>
    <string name="str_force_using_telephone_receiver">强制使用听筒播放语音</string>
    <string name="system_default_emoji">使用系统默认表情</string>
    <string name="system_default_splash">使用默认启动画面</string>
    <string name="str_cache">清除缓存</string>
    <string name="str_clean_chat">清空聊天记录</string>
    <string name="browse_chat_list">查看本地聊天记录</string>
    <string name="ab_chat_export">聊天记录迁移</string>
    <string name="ab_chat_export_tip">我们将会打包您手机上全部的聊天记录并上传，上传过程将会消耗您的流量，确定开始吗？</string>
    <string name="ab_chat_download_tip">下载备份的聊天记录将会消耗您的流量，确定开始吗？</string>
    <string name="ab_chat_upload_hint">上传的聊天记录可以在云端保存7天</string>
    <string name="ab_chat_download_hint">下载聊天记录到本机</string>
    <string name="ab_chat_download">下载</string>
    <string name="ab_chat_upload">上传</string>
    <string name="ab_chat_exporting">正在导出您的聊天记录</string>
    <string name="ab_chat_export_success">聊天记录导出完毕，准备上传</string>
    <string name="ab_chat_export_name_prefix">来自：</string>
    <string name="ab_chat_export_name">#name#的安卓</string>
    <string name="ab_chat_upload_title">上传聊天记录</string>
    <string name="ab_chat_download_title">下载聊天记录</string>
    <string name="ab_chat_create_path_filed">创建目录失败，请检查您的SD卡</string>
    <string name="ab_chat_upload_success">已完成</string>
    <string name="ab_chat_upload_failed">上传失败，请稍后重试</string>
    <string name="ab_chat_upload_success_1">\n上传的聊天记录保存7天，请尽快迁移</string>
    <string name="ab_chat_downloading">正在下载...</string>
    <string name="ab_chat_uploading">正在上传...</string>
    <string name="ab_chat_download_success">下载完成，正在解压文件...</string>
    <string name="ab_chat_import_success">聊天记录迁移成功</string>
    <string name="local_chat_history">本地聊天记录</string>
    <string name="str_cache_clear_message">清除缓存不会删除你的聊天记录,当需要图片和声音数据时将重新从服务器下载,确定清除缓存吗?</string>
    <string name="str_cache_all_chat">将删除所有聊天记录，删除后将不能恢复，确定要全部删除吗？</string>
    <string name="str_clean_all_chat_title">清空聊天记录</string>
    <string name="str_agreement">用户协议</string>
    <string name="str_cur_version">检查更新</string>
    <string name="str_latest_version">您当前已是最新版本</string>
    <string name="str_has_new_version">有新版本哦</string>
    <string name="str_setup">设置</string>
    <string name="str_feedback_succeed">反馈发送成功</string>
    <string name="str_screenlock_propmt_validate">输入锁屏密码解锁</string>
    <string name="str_screenlock_propmt_clear">请输入密码进行确认</string>
    <string name="str_screenlock_propmt_setup">请输入微爱密码</string>
    <string name="str_screenlock_propmt_setup_confirm">请再次输入密码确认</string>
    <string name="str_screenlock_error_setup_inconsitent">两次输入的密码不一致，请重新输入</string>
    <string name="str_screenlock_error_validate_failed">密码错误，请重新输入</string>
    <string name="str_screenlock_dialog_logout_clear">是否退出登录并清除锁屏密码？</string>
    <string name="str_email_have_registerd">这个邮箱已经被注册了!是否直接去登录</string>
    <string name="str_wish_tab_ours">我们的</string>
    <string name="str_wish_tab_mine">我的</string>
    <string name="str_wish_tab_his">他的</string>
    <string name="str_wish_tab_her">她的</string>
    <string name="str_default_username_me">我</string>
    <string name="str_default_username_he">他</string>
    <string name="str_default_username_she">她</string>
    <string name="chinese_colon">：</string>
    <string name="str_pause">暂停</string>
    <string name="str_resume">继续</string>
    <string name="sort">排序</string>
    <string name="str_wish_complete_btn">完成</string>
    <string name="love_wish_reply_one">一定实现</string>
    <string name="love_wish_reply_two">会努力</string>
    <string name="love_wish_reply_three">以后再说吧</string>
    <string name="love_wish_alter_achieve">已经完成此心愿</string>
    <string name="love_wish_alter_not_achieve">此心愿未完成</string>
    <string name="str_report_1">你干嘛呢？</string>
    <string name="str_report_2">你在哪呢？</string>
    <string name="str_report_3">在上班</string>
    <string name="str_report_4">在上课</string>
    <string name="str_report_5">在饭局</string>
    <string name="str_report_6">开会呢</string>
    <string name="str_report_7">在吃饭</string>
    <string name="str_report_8">在自习</string>
    <string name="str_report_9">在聚会</string>
    <string name="str_report_10">路上呢</string>
    <string name="str_report_11">玩游戏呢</string>
    <string name="str_report_12">起床了</string>
    <string name="str_report_13">无聊中...</string>
    <string name="str_report_14">在发呆...</string>
    <string name="str_report_15">我困了</string>
    <string name="str_report_16">生病了</string>
    <string name="str_report_17">拉粑粑...</string>
    <string name="str_report_18">听音乐</string>
    <string name="str_report_19">刚在洗澡</string>
    <string name="str_report_20">在看电视</string>
    <string name="str_report_21">我在家</string>
    <string name="str_report_22">我好饿</string>
    <string name="str_report_23">好累啊</string>
    <string name="str_report_24">在等你</string>
    <string name="str_report_desc_1">亲爱的干嘛呢？</string>
    <string name="str_report_desc_2">亲爱的你在哪呢？</string>
    <string name="str_report_desc_3">我在上班中</string>
    <string name="str_report_desc_4">我在上课呢</string>
    <string name="str_report_desc_5">我还在饭局呢</string>
    <string name="str_report_desc_6">我在开会呢</string>
    <string name="str_report_desc_7">正在吃饭中</string>
    <string name="str_report_desc_8">我在自习呢</string>
    <string name="str_report_desc_9">我在聚会呢</string>
    <string name="str_report_desc_10">我在路上啦</string>
    <string name="common_loading_reload">点击重试</string>
    <string name="common_loading_publish_first_1">发它一条</string>
    <string name="common_loading_failed">不知道哪出了点问题</string>
    <string name="network_disconnect_text1">您的设备未启动移动网络或Wi-Fi网络</string>
    <string name="network_disconnect_text2">如需要连接到互联网，可以参考以下方案:</string>
    <string name="network_disconnect_text3">ㆍ在设备的 "设置" - "Wi-Fi网络" 设置面板中选择一个可用的Wi-Fi热点接入。</string>
    <string name="network_disconnect_text4">ㆍ在设备的 "设置" - "通用" - "网络" 设置面板中启用蜂窝数据(启用后运营商可能会收取数据通信费用)。</string>
    <string name="network_disconnect_text5">如果您已接入Wi-Fi网络:</string>
    <string name="network_disconnect_text6">请检查您所连接的Wi-Fi热点是否已介入互联网，或该热点是否已允许您的设备访问互联网。</string>
</resources>