<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/loading_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/life_fragment_loading_reloading" />

        <TextView
            android:id="@+id/loading_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/common_loading_failed"
            android:textColor="#b7b1a9"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reload_btn_text"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/loading_des"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/common_loading_reload"
            android:textColor="#3575ac"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/publish_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/loading_des"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/publish_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/common_loading_publish_first_1"
                android:textColor="#3575ac"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>